# Censor

./: .env  .gitattributes  .gitignore  23934-censor.kube.conf.gpg  Dockerfile.frontend  README.md  app.py  backend.yaml  docker-compose.yaml  frontend.yaml  main.py  main_API.py  main_config.py  main_file_processor.py  minio.yaml  model_img_video.py  models_config.py  proof-of-concept.py  pyproject.toml  requirements.txt  speech2censored.py  temp_file_manager.py  train.py
.github/workflows/: apply_k8s_updates.yml  check_k8s_manifest.yml  k8s_update.yml  main.yml  publish_docker_images.yml
AudioProcessingTool/: README.md  audio2text_timestamps.py  speech2censored.py  video2audio.py
MediaProcessingTool/: README.md  censore_models.py  detect_and_blur.py  train.py
Source/: audio2text_timestamps.py  gigachat_integration.py  temp_file_manager.py  video2audio.py
VisualProcessingTool/: censor_models.py  detect_and_blur.py  plugin_manager.py  processes.py  video_audio_tools.py
VisualProcessingTool/models/: cigarette.pt
VisualProcessingTool/plugins/: __init__.py  bad_words_detector.py  cigarette_detector.py  (+2 more)
backend/: Dockerfile  backend_config.py  main_API.py  main_file_processor.py  requirements.txt
frontend/: Dockerfile  frontend_config.py  gradio_frontend.py  requirements.txt
k8s_manifests/: backend.yaml  frontend.yaml  minio.yaml
models/: extremism.pt
plugins_system/: plugin_manager.py
processing/: audio_processor.py  image_processor.py  model.py  video_processor.py
utils/: __init__.py  drawing_utils.py  minio_manager.py  video_audio_tools.py
(+25 files in other folders)
