[project]
name = "videocensor-proof-of-concept"
version = "0.1.0"
description = ""
authors = [
    {name = "ilushka-obnimashka",email = "i.trushkin@g.nsu.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ultralytics (>=8.3.75,<9.0.0)"
]

[tool.poetry]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
